fix(truncation): update truncation classes to be more semantic

--- a/src/globals/scss/_helper-classes.scss
+++ b/src/globals/scss/_helper-classes.scss
@@ -1,4 +1,4 @@
-.bx--end-line {
+.bx--text-truncate--end {
   width: 100%;
   display: inline-block;
   text-overflow: ellipsis;
@@ -6,7 +6,7 @@
   overflow: hidden;
 }
 
-.bx--front-line {
+.bx--text-truncate--front {
   width: 100%;
   display: inline-block;
   direction: rtl;
